--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </style>
   </head>
   <body>
-    <div><h3>Welcome to the Route Generator</h3></div>
+    <h3>Welcome to the Route Generator</h3>
     <div id="map"></div>
     <script>
       mapboxgl.accessToken = 'pk.eyJ1IjoiZ3JlZ2Frb2hsZXIiLCJhIjoiY21oNmNteHM3MGlueDJrcTJnYnhrNG1hdSJ9.Jms57i-_QvRWoquaAuy-1A';
