--- a/index.html
+++ b/index.html
@@ -16,13 +16,12 @@
       }
 
       #map {
-        position: absolute;
         top: 0;
         bottom: 0;
         width: 100%;
       }
       #map-container {
-        width: 100%,
+        width: 100%;
         height: 80%;
       }
     </style>
