--- a/index.html
+++ b/index.html
@@ -24,9 +24,21 @@
         width: 100%;
         height: 80%;
       }
+      .navbar {
+        overflow: hidden;
+        background-color: #333;
+        position: fixed; /* Set the navbar to fixed position */
+        top: 0; /* Position the navbar at the top of the page */
+        width: 100%; /* Full width */
+      }
     </style>
   </head>
   <body>
+    <div class="navbar">
+      <a href="#home">Home</a>
+      <a href="#news">News</a>
+      <a href="#contact">Contact</a>
+    </div>
     <h3>Welcome to the Route Generator</h3>
     <div id="map-container">
       <div id="map"></div>
