--- a/index.html
+++ b/index.html
@@ -10,36 +10,51 @@
       rel="stylesheet"
     />
     <style>
+      html {
+        height: 100%;
+        width: 100%;
+      }
       body {
+        height: 100%;
+        width: 100%;
         margin: 0;
         padding: 0;
       }
 
       #map {
-        top: 0;
-        bottom: 0;
         width: 100%;
+        height: 100%;
       }
-      #map-container {
-        width: 100%;
-        height: 80%;
+      .map-container {
+        margin-top: 3em;
+        width: 90%;
+        height: 90%;
+        margin-left: 10%;
       }
       .navbar {
+        height: 3em;
         overflow: hidden;
-        background-color: #333;
-        position: fixed; /* Set the navbar to fixed position */
-        top: 0; /* Position the navbar at the top of the page */
-        width: 100%; /* Full width */
+        background-color: #2C5530;
+        color: white;
+        position: fixed;
+        top: 0; 
+        width: 100%;
+      }
+      .right-div {
+        float: right;
       }
     </style>
   </head>
   <body>
     <div class="navbar">
-      <a href="#home">Home</a>
-      <a href="#news">News</a>
-      <a href="#contact">Contact</a>
+      <div>
+      <h1>Pedestrian Route Generator</h1>
+      </div>
+      <div class="right-div">
+      <a href="#home">Greg Kohler</a>
+      </div>
     </div>
-    <div id="map-container">
+    <div class="map-container">
       <div id="map"></div>
     </div>
     <script>
