--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?			family=TikTok+Sans:opsz,wght@12..36,300..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <style>
       html {
         height: 100%;
@@ -78,7 +79,7 @@
     <div class="lower-bar">
 		<div class="text-entry">
       <label for="start">Starting Point:</label>
-      <input type="text" id="start" name="start"><br>
+      <input type="text" id="start" name="start"><br><br>
       <label for="distance">Distance Goal:</label>
   		<input type="number" id="distance" name="distance"><br>
       <p>Route Type:</p>
