Fixing lower bar

--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
         z-index: 1;
       }
       .header-bar {
-      	style: None;
         height: 5vh;
         overflow: hidden;
         background-color: #2C5530;
@@ -48,8 +47,9 @@
         display: flex;
         align-items: center;
         z-index: 2;
-		text-align: center;
+		    text-align: center;
       }
+
       .lower-bar {
       background-color: #D38B5D;
       color: white;
@@ -68,6 +68,8 @@
       .text-entry {
       margin-top: 1vh;
       text-align: center;
+      margin-bottom: 1vh;
+      height: 100%;
       }
       
       input {
