--- a/index.html
+++ b/index.html
@@ -30,12 +30,14 @@
         width: 100%;
         height: 100%;
       }
+
       .map-container {
         margin-top: 5vh;
         width: 100%;
         height: 70%;
         z-index: 1;
       }
+
       .header-bar {
         height: 5vh;
         overflow: hidden;
@@ -57,6 +59,7 @@
       display: flex;
       justify-content: center;
       z-index 2;
+      height:100%
       }
       
       .main-header {
