--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       display: flex;
       justify-content: center;
       z-index 2;
-      height:100%
+      flex-grow: 1;
       }
       
       .main-header {
@@ -112,13 +112,28 @@
      <button id="submit" class="btn btn-primary" type="button" onclick="addMarker">Calculate Route</button>
     </div>
     <script>
-      mapboxgl.accessToken = 'pk.eyJ1IjoiZ3JlZ2Frb2hsZXIiLCJhIjoiY21oNmNteHM3MGlueDJrcTJnYnhrNG1hdSJ9.Jms57i-_QvRWoquaAuy-1A';
-      const map = new mapboxgl.Map({
-        container: 'map',
-        style: 'mapbox://styles/gregakohler/cmh56515s00x301qocqgl025n',
-        center: [-93.2010, 44.9375],
-        zoom: 10
-      });
+    mapboxgl.accessToken = 'pk.eyJ1IjoiZ3JlZ2Frb2hsZXIiLCJhIjoiY21oNmNteHM3MGlueDJrcTJnYnhrNG1hdSJ9.Jms57i-_QvRWoquaAuy-1A';
+    const map = new mapboxgl.Map({
+      container: 'map',
+      style: 'mapbox://styles/gregakohler/cmh56515s00x301qocqgl025n',
+      center: [-93.2010, 44.9375],
+      zoom: 10
+    });
+    
+    const currentloc = new mapboxgl.GeolocateControl({
+      positionOptions: {
+          enableHighAccuracy: true
+      },
+      trackUserLocation: true
+    });
+    map.addControl(currentloc);
+
+    geolocate.on('geolocate', (event) => {
+        const currentlat = event.coords.latitude;
+        const currentlon = event.coords.longitude;
+        document.getElementById('startlat').value = currentlat
+        document.getElementById('startlon').value = currentlon
+    });
 
     function addMarker(coord) {
     const startcoord = document.getElementById('start');
@@ -128,7 +143,7 @@
         .addTo(map);
 }
     const latinput = document.getElementById('startlat');
-    const loninput = document.getElementById('startlon')
+    const loninput = document.getElementById('startlon');
     const submitButton = document.getElementById('submit');
     let startMarker = null;
 
