Troubleshooting current location fetching

--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
     geolocate.on('currentloc', (event) => {
         const currentlat = event.coords.latitude;
         const currentlon = event.coords.longitude;
+        console.log(`Current Coords: ${currentlat} & ${currentlon}`)
         document.getElementById('startlat').value = currentlat
         document.getElementById('startlon').value = currentlon
     });
