A little more troubleshooting

--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
         const currentlat = event.coords.latitude;
         const currentlon = event.coords.longitude;
         console.log(`Current Coords: ${currentlat} & ${currentlon}`);
-        document.getElementById('startlat').value = currentlat;
-        document.getElementById('startlon').value = currentlon;
+        document.getElementById('startlat').value = currentlat.value;
+        document.getElementById('startlon').value = currentlon.value;
     });
 
     function addMarker(coord) {
