--- a/index.html
+++ b/index.html
@@ -129,11 +129,13 @@
     map.addControl(currentloc);
 
     currentloc.on('currentloc', (event) => {
-        const currentlat = event.coords.latitude;
-        const currentlon = event.coords.longitude;
+        var currentlat = event.coords.latitude;
+        var currentlon = event.coords.longitude;
         console.log(`Current Coords: ${currentlat} & ${currentlon}`);
-        document.getElementById('startlat').value = currentlat.value;
-        document.getElementById('startlon').value = currentlon.value;
+        var currentlatvalue = currentlat.value;
+        var currentlonvalue = currentlon.value;
+        document.getElementById('startlat').value = currentlatvalue;
+        document.getElementById('startlon').value = currentlonvalue;
     });
 
     function addMarker(coord) {
