--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
     currentloc.on('currentloc', (event) => {
         var currentlat = event.coords.latitude;
         var currentlon = event.coords.longitude;
+        console.log("Current LAT", currentlat)
         var currentlatvalue = currentlat.value;
         var currentlonvalue = currentlon.value;
         console.log(`Current Coords: ${currentlatvalue} & ${currentlonvalue}`);
