CSS formatting fix

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       width: 100%;
       display: flex;
       justify-content: center;
-      z-index 2;
+      z-index: 2;
       flex-grow: 1;
       }
       
