--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       display: flex;
       justify-content: center;
       z-index: 2;
-      flex-grow: 2;
+      flex: 1;
       }
       
       .main-header {
