--- a/index.html
+++ b/index.html
@@ -14,13 +14,9 @@
     <link href="https://fonts.googleapis.com/css2?			family=TikTok+Sans:opsz,wght@12..36,300..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <style>
-      html {
-        height: 100%;
-        width: 100%;
-      }
       body {
-        height: 100%;
-        width: 100%;
+        height: 100vh;
+        width: 100vw;
         margin: 0;
         padding: 0;
         font-family: "TikTok Sans", sans-serif;
@@ -60,6 +56,7 @@
       justify-content: center;
       z-index: 2;
       flex: 1;
+      height: auto;
       }
       
       .main-header {
@@ -156,6 +153,12 @@
     map.on('click', (event) => {
       var currentlat = event.coords.latitude;
       var currentlon = event.coords.longitude;
+      console.log(`Current Coords: ${currentlat} & ${currentlon}`);
+      document.getElementById('startlat').value = currentlat;
+      document.getElementById('startlon').value = currentlon;
+      startMarker = new mapboxgl.Marker()
+        .setLngLat([currentlon, currentlat])
+        .addTo(map);
     });
 
     // Add marker to map when coordinates submitted
