--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
       }
       
       .text-entry {
-      margin-top: 1vh;
+      padding-top: 1vh;
       text-align: center;
-      margin-bottom: 1vh;
-      height: 100%;
+      padding-bottom: 1vh;
+      height: fit-content;
       }
       
       input {
@@ -148,7 +148,6 @@
     });
 
     // Or get coords based on click
-    map.addEventListener('click', onClick);
     map.on('click', (event) => {
       var clickcoords = event.lngLat;
       var currentlat = clickedcoords.lat;
