Clickcoords variable adjustment

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
     // Or get coords based on click
     map.on('click', (event) => {
       var clickcoords = event.lngLat;
-      var currentlat = clickedcoords.lat;
+      var currentlat = clickcoords.lat;
       var currentlon = clickcoords.long;
       console.log(`Current Coords: ${currentlat} & ${currentlon}`);
       document.getElementById('startlat').value = currentlat;
