--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
       justify-content: center;
       z-index: 2;
       height: fit-content;
+      bottom: 0;
+      position: fixed;
       }
       
       .main-header {
