More bottom bar adjustments

--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
       z-index: 2;
       height: fit-content;
       bottom: 0;
-      position: fixed;
+      position: absolute;
+      width: 100;
       }
       
       .main-header {
