--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
         margin: 0;
         padding: 0;
         font-family: "TikTok Sans", sans-serif;
-        overflow: hidden;
       }
 
       #map {
@@ -31,9 +30,9 @@
       .map-container {
         padding-top: 5vh;
         width: 100%;
-        height: 70%;
+        height: 80%;
         z-index: 1;
-        flex:1;
+        flex-grow: 1;
       }
 
       .header-bar {
@@ -57,8 +56,7 @@
       z-index: 2;
       height: fit-content;
       bottom: 0;
-      position: absolute;
-      width: 100;
+      width: 100%;
       }
       
       .main-header {
