--- a/index.html
+++ b/index.html
@@ -15,20 +15,20 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <style>
       body {
-        height: 100vh;
-        width: 100vw;
         margin: 0;
         padding: 0;
         font-family: "TikTok Sans", sans-serif;
       }
-
+      .window-div {
+        height: 100vh;
+        width: 100vw;
+      }
       #map {
         width: 100%;
         height: 100%;
       }
 
       .map-container {
-        padding-top: 5vh;
         width: 100%;
         height: 80%;
         z-index: 1;
@@ -102,6 +102,7 @@
     </style>
   </head>
   <body>
+    <div class="window-div">
     <div class="header-bar">
       <div class="main-header">Pedestrian Route Generator</div>
     </div>
@@ -122,6 +123,7 @@
         <input type="radio" id="loop" name="type" value="loop">
         <label for="loop">Loop</label><br><br>
      <button id="submit" class="btn btn-primary" type="button" onclick="addMarker">Calculate Route</button>
+    </div>
     </div>
     <script>
     mapboxgl.accessToken = 'pk.eyJ1IjoiZ3JlZ2Frb2hsZXIiLCJhIjoiY21oNmNteHM3MGlueDJrcTJnYnhrNG1hdSJ9.Jms57i-_QvRWoquaAuy-1A';
@@ -172,6 +174,11 @@
       startMarker = new mapboxgl.Marker()
         .setLngLat([currentlon, currentlat])
         .addTo(map);
+      map.flyTo({
+        center: [currentlon, currentlat],
+        zoom: 5,
+        essential: True
+      })
     });
 
     // Add marker to map when coordinates submitted
