Fixing fly to variable

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
       map.flyTo({
         center: [currentlon, currentlat],
         zoom: 5,
-        essential: True
+        essential: true
       })
     });
 
