--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         height: 100vh;
         width: 100vw;
         display: flex;
+        flex-direction: column;
       }
       #map {
         width: 100%;
@@ -55,6 +56,7 @@
       justify-content: center;
       z-index: 2;
       height: fit-content;
+      bottom: 0;
       width: 100%;
       }
       
