--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
         align-items: center;
         z-index: 2;
 		    text-align: center;
+        justify-content: center;
       }
 
       .lower-bar {
@@ -97,11 +98,6 @@
       label {
         font-size: 1em;
         font-weight: normal;
-      }
-
-      input {
-        border-radius: 5px;
-        border-color: white;
       }
 
       input[type="radio"]:checked {
