Final bottom bar fixes

--- a/index.html
+++ b/index.html
@@ -72,7 +72,6 @@
       height: fit-content;
       display: flex;
       flex-direction: row;
-      align-items: center;
       align-content: center;
       justify-content: center;
       padding-right: 1vw;
@@ -145,6 +144,9 @@
         display: flex;
         flex-direction: column;
         padding-bottom: 1vh;
+        align-content: center;
+        justify-content: center;
+        align-items: center;
       }
 
       .text-entry {
